[gd_scene load_steps=2 format=3 uid="uid://23pmkltw85jv"]

[ext_resource type="Script" path="res://options.gd" id="1_f1b2n"]

[node name="Options" type="Node2D"]
script = ExtResource("1_f1b2n")

[node name="BG" type="ColorRect" parent="."]
offset_right = 1151.0
offset_bottom = 643.0

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 294.0
offset_bottom = 643.0
color = Color(0, 0, 0, 0.678431)

[node name="Label" type="Label" parent="."]
offset_left = 5.0
offset_right = 293.0
offset_bottom = 107.0
text = "Options"
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 3
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 1.0
offset_top = 46.0
offset_right = 41.0
offset_bottom = 86.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Video" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Video"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Audio" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "Audio"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
text = "Controls"

[node name="Exit" type="Button" parent="."]
offset_left = 3.0
offset_top = 212.0
offset_right = 84.0
offset_bottom = 243.0
text = "Back"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer2/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer3/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
